--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://as-theideal.github.io/a-s/",
-  "private": true,
+  "homepage": "https://as-theideal.github.io/a-s",
+  "private": false,
   "dependencies": {
     "@dotlottie/react-player": "^1.6.19",
     "@supabase/supabase-js": "^2.44.4",
