--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://as-theideal.github.io/a-s",
+  "homepage": "https://ahmedsalama.netlify.app",
   "private": false,
   "dependencies": {
     "@dotlottie/react-player": "^1.6.19",
