--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.3.6",
     "react": "^18.3.1",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
     "react-lottie-player": "^2.1.0",
     "react-router-dom": "^6.25.0",
