--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": false,
   "dependencies": {
     "@dotlottie/react-player": "^1.6.19",
+    "@iframe-resizer/react": "^5.3.2",
     "@supabase/supabase-js": "^2.44.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +16,7 @@
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
     "react-lottie-player": "^2.1.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.34",
