--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.34",
+    "react-wavify": "^1.11.1",
     "swiper": "^11.1.10",
     "web-vitals": "^2.1.4"
   },
